Fixed z-index of dropdown

--- a/frontend/src/pages/MainMenu/MainMenu.scss
+++ b/frontend/src/pages/MainMenu/MainMenu.scss
@@ -46,6 +46,8 @@
             border: 1px solid lightgray;
             border-radius: 5px;
             text-align: left;
+            background-color: white;
+            z-index: 2;
             div {
                 min-width: 180px;
                 padding: 14px 18px;
